# project

UsbMonitorTool/: CMakeLists.txt
UsbMonitorTool/common/src/: common.cpp
UsbMonitorTool/include/: usb_monitor.hpp  usb_observer.hpp
UsbMonitorTool/src/: main.cpp  usb_device.cpp  usb_manager.cpp  usb_monitor.cpp
chatDesktop/demo/: CMakeLists.txt
chatDesktop/demo/include/: chatWindow.h  common.h  loginWindow.h
chatDesktop/demo/qrc/navlist/: navlist.qrc
chatDesktop/demo/src/: chatWindow.cpp  homePage.cpp  loginWindow.cpp  main.cpp
chat_desktop/demo/include/: common.h  customWidget.h  homePage.h  loginWindow.h
common/include/: common.hpp  thd_safe_queue.hpp
common/src/: common.cpp
module/chat_desktop/: chatDesktop.md
module/monitor_file/: CMakeLists.txt
module/monitor_file/include/: file_watcher.hpp
module/monitor_file/src/: file_watcher.cpp
module/monitor_proc/: CMakeLists.txt
module/monitor_proc/include/: proc_watcher.hpp
module/monitor_proc/src/: main.cpp  proc_watcher.cpp
module/udev_monitor_tool/: CMakeLists.txt
module/udev_monitor_tool/include/: udev_common_types.hpp  usb_device.hpp  usb_device_manager.hpp  usb_device_monitor.hpp  usb_interface.hpp  (+1 more)
monitor_file/: CMakeLists.txt  build.sh
monitor_file/src/: main.cpp
monitor_proc/: CMakeLists.txt
monitor_proc/src/: proc_watcher.cpp
udev_monitor_tool/: CMakeLists.txt
udev_monitor_tool/common/include/: common.hpp  spdlog.hpp
udev_monitor_tool/include/: udev_common_types.hpp  usb_device.hpp  usb_device_manager.hpp  usb_device_monitor.hpp  usb_device_observer.hpp  usb_interface.hpp  usb_manager.hpp  usb_monitor.hpp
udev_monitor_tool/src/: main.cpp  usb_device.cpp  usb_device_manager.cpp  usb_device_monitor.cpp  usb_device_observer.cpp  usb_interface.cpp  usb_manager.cpp  usb_monitor.cpp
unitTest/: CMakeLists.txt
unitTest/asio/: CMakeLists.txt
unitTest/asio/src/: main.cpp
unitTest/common/: common.h  log.h
unitTest/nlohmann/: CMakeLists.txt
unitTest/nlohmann/src/: main.cpp
unitTest/sfml/: CMakeLists.txt
unitTest/sfml/include/: sfml.hpp
unitTest/sfml/src/: sfml.cpp
unitTest/spdlog/: CMakeLists.txt
unitTest/spdlog/src/: main.cpp
unitTest/thread/: CMakeLists.txt
unitTest/thread/include/: common.hpp  consumer.hpp  log.hpp  producer.hpp  producerConsumer.hpp  tsProductsQueue.hpp
unitTest/thread/src/: consumer.cpp  main.cpp  producer.cpp  producerConsumer.cpp
unitTest/tmp/: Makefile  main
unitTest/tmp/include/: tmp.h
unitTest/tmp/src/: main.cpp  tmp.cpp
unitTest/usbHub/: Makefile  main  usb.py
unitTest/usbHub/include/: usbHidHub.h  usbSerialHub.h
unitTest/usbHub/src/: main.cpp  usbHidHub.cpp  usbSerialHub.cpp
(+11 files in other folders)
